# vibeverb

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  juce-ableton-effect-guide.md  reverb-effect.md
JuceReverb/: CMakeLists.txt  mingw-w64-toolchain.cmake
JuceReverb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/: PluginProcessor.cpp  PluginProcessor.h
cmake/: toolchain-mingw.cmake
